--- a/docker/polkastats-backend/docker-compose-social.yml
+++ b/docker/polkastats-backend/docker-compose-social.yml
@@ -37,14 +37,14 @@ services:
   # Hasura
   #
   graphql-engine:
-    image: hasura/graphql-engine:v1.1.0
+    image: hasura/graphql-engine:v1.3.3
     ports:
-      - '8082:8080'
+      - '8080:8080'
     depends_on:
       - 'postgres'
     restart: always
     environment:
-      HASURA_GRAPHQL_DATABASE_URL: postgresql://polkastats:polkastats@34.125.127.63:5432/polkastats
+      HASURA_GRAPHQL_DATABASE_URL: postgres://polkastats:polkastats@34.125.127.63:5432/polkastats
       HASURA_GRAPHQL_ENABLE_CONSOLE: 'true' # set to "false" to disable console
       HASURA_GRAPHQL_ENABLED_LOG_TYPES: startup, http-log, webhook-log, websocket-log, query-log
       ## uncomment next line to set an admin secret
