--- a/docker/polkastats-backend/docker-compose-social.yml
+++ b/docker/polkastats-backend/docker-compose-social.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: "3"
 
 services:
   #
@@ -9,11 +9,11 @@ services:
     hostname: substrate-node
     build: ./substrate-client
     volumes:
-      - 'substrate-data:/data'
+      - "substrate-data:/data"
     ports:
-      - '30333:30333'
-      - '9933:9933'
-      - '9944:9944'
+      - "30333:30333"
+      - "9933:9933"
+      - "9944:9944"
     command: -d /data --unsafe-ws-external --unsafe-rpc-external --rpc-cors all --pruning=archive --name 'social.network stats' --chain polkadot
     restart: on-failure
   #
@@ -21,15 +21,17 @@ services:
   #
   postgres:
     image: postgres
+    ports:
+     - "5432:5432"
     restart: always
     volumes:
-      - 'db-data:/var/lib/postgresql/data'
-      - './sql/polkastats.sql:/docker-entrypoint-initdb.d/polkastats.sql'
+      - "db-data:/var/lib/postgresql/data"
+      - "./sql/polkastats.sql:/docker-entrypoint-initdb.d/polkastats.sql"
     environment:
-      POSTGRES_USER: 'polkastats'
-      POSTGRES_PASSWORD: 'polkastats'
+      POSTGRES_USER: "polkastats"
+      POSTGRES_PASSWORD: "polkastats"
     healthcheck:
-      test: ['CMD-SHELL', 'pg_isready -U polkastats']
+      test: ["CMD-SHELL", "pg_isready -U polkastats"]
       interval: 5s
       timeout: 5s
       retries: 5
@@ -39,13 +41,13 @@ services:
   graphql-engine:
     image: hasura/graphql-engine:v1.3.3
     ports:
-      - '8080:8080'
+      - "8080:8080"
     depends_on:
-      - 'postgres'
+      - "postgres"
     restart: always
     environment:
       HASURA_GRAPHQL_DATABASE_URL: postgres://polkastats:polkastats@postgres:5432/polkastats
-      HASURA_GRAPHQL_ENABLE_CONSOLE: 'true' # set to "false" to disable console
+      HASURA_GRAPHQL_ENABLE_CONSOLE: "true" # set to "false" to disable console
       HASURA_GRAPHQL_ENABLED_LOG_TYPES: startup, http-log, webhook-log, websocket-log, query-log
       ## uncomment next line to set an admin secret
       HASURA_GRAPHQL_ADMIN_SECRET: secret
@@ -58,13 +60,14 @@ services:
       context: ../../
       dockerfile: ./docker/polkastats-backend/backend/Dockerfile
     depends_on:
-      - 'postgres'
-      - 'substrate-node'
+      - "postgres"
+      - "substrate-node"
     restart: on-failure
     environment:
       - NODE_ENV=production
       - WS_PROVIDER_URL=wss://chi1.social.network
       - SUBSTRATE_NETWORK=polkadot
+      - POSTGRES_HOST=postgres
 #
 # Persisten volumes
 #
