--- a/docker/polkastats-backend/docker-compose-social.yml
+++ b/docker/polkastats-backend/docker-compose-social.yml
@@ -22,7 +22,7 @@ services:
   postgres:
     image: postgres
     ports:
-     - "5432:5432"
+     - "5434:5432"
     restart: always
     volumes:
       - "db-data:/var/lib/postgresql/data"
@@ -50,7 +50,7 @@ services:
       HASURA_GRAPHQL_ENABLE_CONSOLE: "true" # set to "false" to disable console
       HASURA_GRAPHQL_ENABLED_LOG_TYPES: startup, http-log, webhook-log, websocket-log, query-log
       ## uncomment next line to set an admin secret
-      HASURA_GRAPHQL_ADMIN_SECRET: secret
+      #  HASURA_GRAPHQL_ADMIN_SECRET: secret
   #
   # Block crawler
   #
@@ -68,6 +68,8 @@ services:
       - WS_PROVIDER_URL=wss://chi1.social.network
       - SUBSTRATE_NETWORK=polkadot
       - POSTGRES_HOST=postgres
+      - POSTGRES_PORT=5432
+
 #
 # Persisten volumes
 #
